tests/cases/modules/ok/package-cache-indirect-call-main.ari
mod cache_indirect_calls;

fn main() -> i64 {
  cache_indirect_calls::indirect_call_flow()
}
