tests/cases/modules/errors/duplicate-module-file-identity.ari
mod module_identity_source as First;
mod module_identity_source as Second;

fn main() -> i64 {
  return First::value();
}
